refactor: get(0) 대신 getFirst() 사용